src/styles/components/loaders.scss
// SPINNER

.loader-spinner {
  align-items: center;
  background-color: rgba(0, 0, 0, .3);
  display: flex;
  flex-direction: column;
  inset: 0;
  justify-content: center;
  position: fixed;
  transition: all .5s ease-in-out;
  z-index: 999999;
}

.spinner {
  height: 54px;
  position: relative;
  width: 54px;
}

.spinner div {
  animation: spinner 1.2s cubic-bezier(.5, 0, .5, 1) infinite;
  border: 3px solid #fff;
  border-color: #fff transparent transparent transparent;
  border-radius: 50%;
  box-sizing: border-box;
  display: block;
  height: 2.5rem;
  position: absolute;
  width: 2.5rem;
}

.spinner div:nth-child(1) {
  animation-delay: -.45s;
}

.spinner div:nth-child(2) {
  animation-delay: -.3s;
}

.spinner div:nth-child(3) {
  animation-delay: -.15s;
}

@keyframes spinner {
  0% { transform: rotate(0); }
  100% { transform: rotate(360deg); }
}

// DOTS

.loader-dots {
  display: flex;
  justify-content: center;
  margin-top: 1rem;
  overflow: hidden;
  padding: 2rem 0;
  width: 2.5rem;
}

.dots {
  animation: dots 1.5s infinite linear;
  background-color: var(--color-main);
  border-radius: 5px;
  box-shadow: 9984px 0 0 0 var(--color-main), 9999px 0 0 0 var(--color-main), 10014px 0 0 0 var(--color-main);
  color: var(--color-main);
  height: 10px;
  left: -9999px;
  position: relative;
  width: 10px;
}

@keyframes dots {
  0% {
    box-shadow: 9984px 0 0 0 var(--color-main), 9999px 0 0 0 var(--color-main), 10014px 0 0 0 var(--color-main);
  }
  16.667% {
    box-shadow: 9984px -10px 0 0 var(--color-main), 9999px 0 0 0 var(--color-main), 10014px 0 0 0 var(--color-main);
  }
  33.333% {
    box-shadow: 9984px 0 0 0 var(--color-main), 9999px 0 0 0 var(--color-main), 10014px 0 0 0 var(--color-main);
  }
  50% {
    box-shadow: 9984px 0 0 0 var(--color-main), 9999px -10px 0 0 var(--color-main), 10014px 0 0 0 var(--color-main);
  }
  66.667% {
    box-shadow: 9984px 0 0 0 var(--color-main), 9999px 0 0 0 var(--color-main), 10014px 0 0 0 var(--color-main);
  }
  83.333% {
    box-shadow: 9984px 0 0 0 var(--color-main), 9999px 0 0 0 var(--color-main), 10014px -10px 0 0 var(--color-main);
  }
  100% {
    box-shadow: 9984px 0 0 0 var(--color-main), 9999px 0 0 0 var(--color-main), 10014px 0 0 0 var(--color-main);
  }
}

